--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "npm": "please-use-yarn"
+  },
   "dependencies": {
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
