--- a/package.json
+++ b/package.json
@@ -11,15 +11,30 @@
   "engines": {
     "npm": "please-use-yarn"
   },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  },
   "dependencies": {
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.4.2",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-overlay": "^6.0.11",
+    "styled-components": "^6.0.0-rc.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
