--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.4.2",
@@ -27,6 +28,8 @@
     "react-dom": "18.2.0",
     "react-error-overlay": "^6.0.11",
     "styled-components": "^6.0.0-rc.1",
+    "tsyringe": "^4.7.0",
+
     "typescript": "5.0.4"
   },
   "devDependencies": {
