--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.4.2",
     "eslint-import-resolver-typescript": "^3.5.5",
+    "moment": "^2.29.4",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-overlay": "^6.0.11",
     "styled-components": "^6.0.0-rc.1",
     "tsyringe": "^4.7.0",
-
     "typescript": "5.0.4"
   },
   "devDependencies": {
